...
//

import Foundation
import UIKit

enum EarTrainingItem: String {
    case interval, melody, chordType, chordProgression, key
    
    func title() -> String {
        switch self {
        case .chordProgression:
            return "chord progression"
        case .chordType:
            return "chord type"
        default:
            return self.rawValue
        }
    }
    
    func description() -> String? {
...
