...
        switch self {
        case .settings:
            return rawValue
        case .freeplay:
            return "free play"
        case .earTraining:
            return "practice ear training"
        case .theory:
            return "study chords/scales"
        default:
            return rawValue
        }
    }
}

...
