...
    func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
        guard let cell = collectionView.dequeueReusableCell(withReuseIdentifier: "CardViewCell", for: indexPath) as? CardViewCell else {
            return UICollectionViewCell()
        }
        if indexPath.row == 0 {
            let vm = CardViewModel()
            vm.image = UIImage(systemName: "plus")
            cell.viewModel = vm
            return cell
        }
        let vm = CardViewModel()
        let progressionItem = progression.items[indexPath.row - 1]
        progressionItem.guid = "progressionItem-\(indexPath.row - 1)"
...
    func collectionView(_ collectionView: UICollectionView, performDropWith coordinator: UICollectionViewDropCoordinator) {
        guard let dropItem = coordinator.items.first,
            let sourceIndexPath = dropItem.sourceIndexPath,
            let destinationIndexPath = coordinator.destinationIndexPath,
            destinationIndexPath.row > 0 else { return }
        collectionView.performBatchUpdates({
            let item = progression.items[sourceIndexPath.row - 1]
            progression.items.remove(at: sourceIndexPath.row - 1)
            progression.items.insert(item, at: destinationIndexPath.row - 1)
            collectionView.deleteItems(at: [sourceIndexPath])
            collectionView.insertItems(at: [destinationIndexPath])
            progression.updateGuids() // ensure guids update to latest state for editing
        }, completion: { _ in
...
